# 4thir-POC

./: .env  .gitignore  Home.py  requirements.txt
api/: Age-Detection.py  Agedetect.py  Dockerfile  Hand-Written-Text-Detector.py  HandDetector.py  Loan-Document-Analyzer.py  LoanAnalyzer.py  Medical-doc-analyzer.py  Medicaldocanalyzer.py  README.md  install_packages.sh  main.py  pyproject.toml  requirements.txt  test.py
modules/: document_processing.py  site_data_processing.py
my_python_project/: pyproject.toml
pages/: Accent-recognition.py  Age-Detection.py  Land-Search.py  Land-repository.py  Land_Document_Processing.py  Ride-Router.py  Self-organization-maps.py  Traffic_Analyzer.py  google-maps.py  land_repo.py
uipath-packages/: pyproject.toml
utils/: map_utils.py
