[tool.poetry]
name = "uipack"
version = "2.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115.6,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
pydantic = ">=2.10.5,<3.0.0"
python-multipart = ">=0.0.20,<0.0.21"
python-dotenv = ">=1.0.1,<2.0.0"
numpy = ">=2.2.1,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
scipy = ">=1.15.0,<2.0.0"
scikit-learn = ">=1.6.0,<2.0.0"
absl-py = ">=2.1.0,<3.0.0"
aiohappyeyeballs = ">=2.4.4,<3.0.0"
aiohttp = ">=3.11.11,<4.0.0"
aiosignal = ">=1.3.2,<2.0.0"
altair = ">=5.5.0,<6.0.0"
annotated-types = ">=0.7.0,<0.8.0"
anyio = ">=4.8.0,<5.0.0"
asttokens = ">=3.0.0,<4.0.0"
attrs = ">=24.3.0,<25.0.0"
blinker = ">=1.9.0,<2.0.0"
branca = ">=0.8.1,<0.9.0"
cachetools = ">=5.5.0,<6.0.0"
certifi = ">=2024.12.14,<2025.0.0"
cffi = ">=1.17.1,<2.0.0"
chardet = ">=5.2.0,<6.0.0"
charset-normalizer = ">=3.4.1,<4.0.0"
click = ">=8.1.8,<9.0.0"
colorama = ">=0.4.6,<0.5.0"
comm = ">=0.2.2,<0.3.0"
decorator = ">=5.1.1,<6.0.0"
deprecated = ">=1.2.15,<2.0.0"
distro = ">=1.9.0,<2.0.0"
dnspython = ">=2.7.0,<3.0.0"
email-validator = ">=2.2.0,<3.0.0"
executing = ">=2.1.0,<3.0.0"
fastapi-cli = ">=0.0.7,<0.0.8"
filelock = ">=3.16.1,<4.0.0"
folium = ">=0.19.4,<0.20.0"
frozenlist = ">=1.5.0,<2.0.0"
fsspec = ">=2024.12.0,<2025.0.0"
gcloud = ">=0.18.3,<0.19.0"
geographiclib = ">=2.0,<3.0"
geojson = ">=3.2.0,<4.0.0"
geopy = ">=2.4.1,<3.0.0"
gitdb = ">=4.0.12,<5.0.0"
gitpython = ">=3.1.44,<4.0.0"
gmaps = ">=0.9.0,<0.10.0"
google-api-core = ">=2.24.0,<3.0.0"
google-auth = ">=2.37.0,<3.0.0"
google-cloud = ">=0.34.0,<0.35.0"
google-cloud-vision = ">=3.9.0,<4.0.0"
googleapis-common-protos = ">=1.66.0,<2.0.0"
googlemaps = ">=4.10.0,<5.0.0"
greenlet = ">=3.1.1,<4.0.0"
grpcio = ">=1.69.0,<2.0.0"
grpcio-status = ">=1.69.0,<2.0.0"
h11 = ">=0.14.0,<0.15.0"
h2 = ">=4.1.0,<5.0.0"
hpack = ">=4.0.0,<5.0.0"
hstspreload = ">=2025.1.1,<2026.0.0"
httpcore = ">=1.0.7,<2.0.0"
httplib2 = ">=0.22.0,<0.23.0"
httptools = ">=0.6.4,<0.7.0"
httpx = ">=0.28.1,<0.29.0"
httpx-sse = ">=0.4.0,<0.5.0"
hyperframe = ">=6.0.1,<7.0.0"
idna = ">=3.10,<4.0"
immutabledict = ">=4.2.1,<5.0.0"
ipython = ">=8.31.0,<9.0.0"
ipywidgets = ">=8.1.5,<9.0.0"
jedi = ">=0.19.2,<0.20.0"
jinja2 = ">=3.1.5,<4.0.0"
jiter = ">=0.8.2,<0.9.0"
joblib = ">=1.4.2,<2.0.0"
jsonpatch = ">=1.33,<2.0"
jsonpointer = ">=3.0.0,<4.0.0"
jsonschema = ">=4.23.0,<5.0.0"
jupyterlab-widgets = ">=3.0.13,<4.0.0"
llvmlite = ">=0.43.0,<0.44.0"
markdown-it-py = ">=3.0.0,<4.0.0"
markupsafe = ">=3.0.2,<4.0.0"
marshmallow = ">=3.24.2,<4.0.0"
matplotlib-inline = ">=0.1.7,<0.2.0"
mdurl = ">=0.1.2,<0.2.0"
minisom = ">=2.3.3,<3.0.0"
more-itertools = ">=10.5.0,<11.0.0"
mpmath = ">=1.3.0,<2.0.0"
multidict = ">=6.1.0,<7.0.0"
mypy-extensions = ">=1.0.0,<2.0.0"
narwhals = ">=1.21.1,<2.0.0"
networkx = ">=3.4.2,<4.0.0"
oauth2client = ">=4.1.3,<5.0.0"
openai = ">=1.59.5,<2.0.0"
opencv-python-headless = ">=4.10.0.84,<5.0.0"
orjson = ">=3.10.14,<4.0.0"
ortools = ">=9.11.4210,<10.0.0"
packaging = ">=24.2,<25.0"
parso = ">=0.8.4,<0.9.0"
pillow = ">=11.1.0,<12.0.0"
plotly = ">=5.24.1,<6.0.0"
polyline = ">=2.0.2,<3.0.0"
prompt-toolkit = ">=3.0.48,<4.0.0"
propcache = ">=0.2.1,<0.3.0"
proto-plus = ">=1.25.0,<2.0.0"
pulp = ">=2.9.0,<3.0.0"
pure-eval = ">=0.2.3,<0.3.0"
pyarrow = ">=18.1.0,<19.0.0"
pyasn1 = ">=0.6.1,<0.7.0"
pyasn1-modules = ">=0.4.1,<0.5.0"
pycparser = ">=2.22,<3.0"
pydantic-settings = ">=2.7.1,<3.0.0"
pydantic-core = ">=2.27.2,<3.0.0"
pydeck = ">=0.9.1,<0.10.0"
pygments = ">=2.19.1,<3.0.0"
pymupdf = ">=1.25.1,<2.0.0"
pyparsing = ">=3.2.1,<4.0.0"
pytesseract = ">=0.3.13,<0.4.0"
python-dateutil = ">=2.9.0.post0,<3.0.0"
pytz = ">=2024.2,<2025.0"
pyyaml = ">=6.0.2,<7.0.0"
rapidfuzz = ">=3.11.0,<4.0.0"
referencing = ">=0.35.1,<0.36.0"
regex = ">=2024.11.6,<2025.0.0"
requests = ">=2.32.3,<3.0.0"
requests-toolbelt = ">=1.0.0,<2.0.0"
rfc3986 = ">=2.0.0,<3.0.0"
rich = ">=13.9.4,<14.0.0"
rpds-py = ">=0.22.3,<0.23.0"
rsa = "*"
setuptools = ">=75.8.0,<76.0.0"
shellingham = ">=1.5.4,<2.0.0"
six = ">=1.17.0,<2.0.0"
smmap = ">=5.0.2,<6.0.0"
sniffio = ">=1.3.1,<2.0.0"
sounddevice = ">=0.5.1,<0.6.0"
sqlalchemy = ">=2.0.36,<3.0.0"
stack-data = ">=0.6.3,<0.7.0"
streamlit = ">=1.41.1,<2.0.0"
streamlit-folium = ">=0.24.0,<0.25.0"
sympy = ">=1.13.3,<2.0.0"
shapely = ">=2.0.6,<3.0.0"
tabulate = ">=0.9.0,<0.10.0"
tenacity = ">=9.0.0,<10.0.0"
threadpoolctl = ">=3.5.0,<4.0.0"
tiktoken = ">=0.8.0,<0.9.0"
toml = ">=0.10.2,<0.11.0"
toolz = ">=1.0.0,<2.0.0"
tornado = ">=6.4.2,<7.0.0"
tqdm = ">=4.67.1,<5.0.0"
traitlets = ">=5.14.3,<6.0.0"
typer = ">=0.15.1,<0.16.0"
typing-inspect = ">=0.9.0,<0.10.0"
typing-extensions = ">=4.12.2,<5.0.0"
tzdata = ">=2024.2,<2025.0"
urllib3 = ">=2.3.0,<3.0.0"
watchdog = ">=6.0.0,<7.0.0"
watchfiles = ">=1.0.3,<2.0.0"
wavio = ">=0.0.9,<0.0.10"
wcwidth = ">=0.2.13,<0.3.0"
websockets = ">=14.1,<15.0"
widgetsnbextension = ">=4.0.13,<5.0.0"
wrapt = ">=1.17.0,<2.0.0"
xyzservices = ">=2024.9.0,<2025.0.0"
yarl = ">=1.18.3,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"