[project]
name = "my-python-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.0.0)",
    "scikit-learn (>=1.2.2)",
    "torch (>=2.0.0)",
    "fastapi (>=0.100.0)",
    "uvicorn[standard] (>=0.22.0)",
    "python-multipart (>=0.0.6)",
    "pydantic (>=2.0.0)",
    "plotly (>=5.15.0)",
    "streamlit (>=1.24.0)",
    "openai (>=0.27.8)",
    "langchain (>=0.0.27)",
    "tiktoken (>=0.4.0)",
    "python-dotenv (>=1.0.0)",
    "requests (>=2.31.0)",
    "pyyaml (>=6.0)",
    "pillow (>=10.0.0)",
    "opencv-python-headless (>=4.8.0)",
    "geopy (>=2.3.0)",
    "folium (>=0.14.0)",
    "sqlalchemy (>=2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
